fix names of services api
